--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">LES ARTISTES</a></li>
-                <li><a href="page2.html">MES ARTISTES</a></li>
+                <li><a href="mesartistes.html">MES ARTISTES</a></li>
+                <li><a href="page3.html">L'ARTISTE DU JOUR</a></li>
             </ul>
         </nav>
     </header>
@@ -65,10 +65,10 @@
 
         <article class="moteurderecherche">
             <div class="moteurderecherche1">
-                <input type="text" id="search1" placeholder="Recherche par nom">
+                <input type="text" id="search1" placeholder="Recherche par artiste">
             </div>
             <div class="moteurderecherche2">
-                <input type="text" id="search2" placeholder="Recherche par groupe">
+                <input type="text" id="search2" placeholder="Recherche par chanson">
             </div>
         </article>
 
